apps/tachtit/ollama/service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama-lb
  labels:
    app: ollama
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ollama.seyzahl.com
spec:
  type: LoadBalancer
  ports:
    - port: 11434
      targetPort: 11434
      protocol: TCP
      name: http
  selector:
    app: ollama
